# alloiq

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  package.json  pyproject.toml  vercel.json
config/: invest.example.toml
invest/: __init__.py  audit.py  backtest.py  calendars.py  cli.py  config.py  db.py  dev_server.py  earnings.py  engine.py  external_signals.py  features.py  ideas.py  instrumentation.py  llm_review.py  macro.py  macro_fred.py  managers.py  market.py  models.py  news.py  notifications.py  outcomes.py  paper.py  pipeline.py  portfolio.py  privacy.py  quality.py  reports.py  research.py  risk.py  scheduler.py  site.py  sizing.py  symbols.py  thesis.py  underwriting.py  util.py  valuation.py  warehouse.py
plans/: alloiq-dashboard-design-plan.md
tests/: test_audit.py  test_backtest.py  test_benchmark.py  test_broker_parsers.py  test_calendars.py  test_cli.py  test_config.py  test_db_dedupe.py  test_earnings.py  test_engine.py  test_external_signals.py  test_ideas.py  test_instrumentation.py  test_llm_review.py  test_macro_fred.py  test_managers.py  test_market.py  test_news.py  test_notifications.py  test_paper.py  test_pipeline.py  test_portfolio.py  test_quality.py  test_report.py  test_research_engine.py  test_risk.py  test_scheduler.py  test_sec_parser.py  test_site.py  test_sizing.py  test_symbols.py  test_valuation.py  test_warehouse.py
web/: ai-thesis-core.html  ai-thesis-core.js  app.js  backtest.html  backtest.js  dashboard.html  home.js  index.html  manifest.webmanifest  optimizer.html  optimizer.js  (+7 more)
(+14 files in other folders)
